--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "HW#2",
   "version": "1.0.0",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
